stop using env.properties, ignore application.properties