@@ -1,14 +1,14 @@
-FROM gradle:4.7.0-jdk8-alpine AS build
+# Stage 1: Build the application
+FROM gradle:8.7.0-jdk17-alpine AS build
 COPY --chown=gradle:gradle . /home/gradle/src
 WORKDIR /home/gradle/src
 RUN gradle build --no-daemon
 
-FROM openjdk:8-jre-slim
-
+# Stage 2: Create the runtime image
+FROM openjdk:17-alpine
 EXPOSE 8080
-
+EXPOSE 8085
 RUN mkdir /app
-
+WORKDIR /app
 COPY --from=build /home/gradle/src/build/libs/*.jar /app/spring-boot-application.jar
-
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
+ENTRYPOINT ["java", "-jar", "/app/spring-boot-application.jar"]
